--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Oladipupo Ajabi <dipoajabisam95@gmail.com>
+Yusuf Taiwo <yo.taiwo@gmail.com>
